5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4194/executions/1646_652.log
== TEST (2019-04-23 16:29:14) 
-- CODE:
num = int(input("Digite um numero de 3 digitos"))
var1 = (num//100)%10

if(num)
-- ERROR:
File "XXXX", line 4
    if(num)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:29:22) 
-- CODE:
num = int(input("Digite um numero de 3 digitos"))
var1 = (num//100)%10

-- ERROR:
File "XXXX", line 4
    if(num)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:29:40) 
-- CODE:
num = int(input("Digite um numero de 3 digitos"))
var1 = (num//100)%10
print( var1)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:29:56) 
-- CODE:
num = int(input("Digite um numero de 3 digitos"))
var1 = (num//100)
print( var1)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:30:11) 
-- CODE:
num = int(input("Digite um numero de 3 digitos"))
var1 = (num//100)
print( var1)
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:30:22) 
-- CODE:
num = int(input("Digite um numero de 3 digitos"))
var1 = (num510)
print( var1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var1 = (num510)
NameError: name 'num510' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:30:31) 
-- CODE:
num = int(input("Digite um numero de 3 digitos"))
var1 = (num%10)
print( var1)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
